--- a/src/_includes/home-content.njk
+++ b/src/_includes/home-content.njk
@@ -1,7 +1,7 @@
 <div class="containerpvc">
   <br/>
   <section aria-labelledby="usp-heading">
-    <h2 id="usp-heading" class="intro"><strong>40 ΧΡΟΝΙΑ ΕΜΠΕΙΡΙΑ ΣΤΑ ΚΟΥΦΩΜΑΤΑ</strong><br/><br/>Ετοιμοπαράδοτα κουφώματα PVC με εγγύηση χαμηλότερης τιμής. Μέγιστα επίπεδα θερμομόνωσης, ηχομόνωσης και ασφάλειας. Αντικαταστήστε τώρα τα παλιά σας κουφώματα με τα νέα ενεργειακά κουφώματα της PVCOUTLET® με 12 άτοκες δόσεις!</h2>
+    <h2 id="usp-heading" class="intro"><strong>40 ΧΡΟΝΙΑ ΕΜΠΕΙΡΙΑ ΣΤΑ ΚΟΥΦΩΜΑΤΑ</strong><br/><br/>Ετοιμοπαράδοτα κουφώματα PVC με εγγύηση χαμηλότερης τιμής. <a href="/odigos-koufomata-pvc/" title="πώς να επιλέξω κουφώματα PVC">Δείτε τον οδηγό επιλογής κουφωμάτων</a>. Μέγιστα επίπεδα θερμομόνωσης, ηχομόνωσης και ασφάλειας. Αντικαταστήστε τώρα τα παλιά σας κουφώματα με τα νέα ενεργειακά κουφώματα της PVCOUTLET® με 12 άτοκες δόσεις!</h2>
     <br/>
     <div class="row">
       <div class="column bbl"><br/>
@@ -26,7 +26,7 @@
   <p class="basii">Προσφέρουμε <strong>PVC κουφώματα σε μεγάλη ποικιλία και ευρεία γκάμα χρωμάτων.</strong> Στην PVCOUTLET® θα βρείτε μονόφυλλα και δίφυλλα <strong>παράθυρα pvc</strong> για σαλόνι, υπνοδωμάτια, μπάνιο και κουζίνα. Τα <span class="nname">pvc παράθυρα</span> έχουν διπλά ενεργειακά τζάμια 24mm 4 εποχών, ακουστικά χερούλια και αντιδιαρρηκτική προστασία.</p>
   <div class="row">
     <div class="column">
-      <img alt="Παράθυρο pvc" src="/img/parathiro-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/parathiro-pvc-pvcoutlet.webp", "Παράθυρο pvc", 400, 300, "", "lazy" %}
       <div class="pvch2"><h3><a title="Ανοιγόμενα παράθυρα pvc" href="/pvc-parathira/">Παράθυρα PVC ανοιγόμενα</a></h3><p>Συνθετικά κουφώματα pvc για εξοικονόμιση ενέργειας και ηχομόνωση κατοικιών και επαγγελματικών χώρων.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Μονόφυλλα παράθυρα pvc" href="/pvc-parathira/">Μονόφυλλα παράθυρα pvc</a>
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="column">
-      <img alt="Παράθυρο μπάνιου pvc" src="/img/parathiro-baniou-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/parathiro-baniou-pvc-pvcoutlet.webp", "Παράθυρο μπάνιου pvc", 400, 300, "", "lazy" %}
       <div class="pvch2"><h3><a title="παράθυρα pvc μπάνιου" href="/pvc-parathira/">Παράθυρα Μπάνιου PVC</a></h3><p>Τα παράθυρα από pvc είναι η καλύτερη λύση για μπάνιο λόγω ανθεκτικότητας στην υγρασία.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="παράθυρα pvc μπάνιου" href="/pvc-parathira/">Μονόφυλλα παράθυρα μπάνιου pvc</a>
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="column">
-      <img alt="Παράθυρο κουζίνας pvc" src="/img/parathiro-pvc-kouzinas-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/parathiro-pvc-kouzinas-pvcoutlet.webp", "Παράθυρο κουζίνας pvc", 400, 300, "", "lazy" %}
       <div class="pvch2"><h3><a title="παράθυρα pvc κουζίνας" href="/pvc-parathira/">Παράθυρα Κουζίνας PVC</a></h3><p>Παράθυρα κουζίνας pvc που καθαρίζουν εύκολα και παρέχουν υψηλή ανθεκτικότητα σε οικονομικές τιμές.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Μονόφυλλα παράθυρα κουζίνας pvc" href="/pvc-parathira/">Μονόφυλλα παράθυρα κουζίνας pvc</a>
@@ -52,13 +52,13 @@
     </div>
   </div>
 
-  <a href="/epikoinonia/" title="άτοκες δόσεις"><img alt="12 άτοκες δόσεις στα κουφώματα" src="/img/12-atokes-dosis.jpg" class="diaff" width="720" height="200" loading="lazy"></a>
+  <a href="/epikoinonia/" title="άτοκες δόσεις">{% image "img/12-atokes-dosis.jpg", "12 άτοκες δόσεις στα κουφώματα", 720, 200, "diaff", "lazy" %}</a>
 
   <p class="titlos2">PVC Κουφώματα | Μπαλκονόπορτες</p>
   <p class="basii">Στην PVC OUTLET® έχουμε <span class="nname">πόρτες pvc και μπαλκονόπορτες pvc</span> που καλύπτουν κάθε ανάγκη. Μονόφυλλη ή δίφυλλη μπαλκονόπορτα pvc στις διαστάσεις που χρειάζεστε. <span class="nname">Οι μπαλκονόπορτες pvc</span> της PVCOUTLET® παρέχουν εξοικονόμιση ενέργειας και χρημάτων με <span class="nname">υψηλά επίπεδα θερμομόνωσης και ηχομόνωσης</span>. Όλες οι <span class="nname">pvc μπαλκονόπορτες</span> έχουν διπλά ενεργειακά τζάμια 24mm 4 εποχών, ακουστικά χερούλια και αντιδιαρρηκτική προστασία.</p>
   <div class="row">
     <div class="column">
-      <img alt="Μονόφυλλη πόρτα pvc" src="/img/porta-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/porta-pvc-pvcoutlet.webp", "Μονόφυλλη πόρτα pvc", 400, 300, "", "lazy" %}
       <div class="pvch2"><h3><a title="Πόρτες από συνθετικό PVC" href="/pvc-balkonoportes/">Πόρτες Εισόδου PVC</a></h3><p>Θερμομονωτικές πόρτες από pvc σε μοντέρνα ή παραδοσιακά σχέδια.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Μονόφυλλες πόρτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες πόρτες pvc</a>
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="column">
-      <img alt="Μπαλκονόπορτα pvc" src="/img/balkonopora-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/balkonopora-pvc-pvcoutlet.webp", "Μπαλκονόπορτα pvc", 400, 300, "", "lazy" %}
       <div class="pvch2"><h3><a title="μπαλκονόπορτες από συνθετικό pvc" href="/pvc-balkonoportes/">Μπαλκονόπορτες PVC</a></h3><p>Η πιο συμφέρουσα λύση κουφωμάτων της αγοράς: οικονομική τιμή με μέγιστη ηχομόνωση και θερμομόνωση.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Μονόφυλλες μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες μπαλκονόπορτες pvc</a>
@@ -74,7 +74,7 @@
       </div>
     </div>
     <div class="column">
-      <img alt="Κουζινόπορτα pvc" src="/img/balkonoporta-pvc-kouzinas-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/balkonoporta-pvc-kouzinas-pvcoutlet.webp", "Κουζινόπορτα pvc", 400, 300, "", "lazy" %}
       <div class="pvch2"><h3><a title="Κουζινόπορτες από pvc" href="/pvc-balkonoportes/">Κουζινόπορτα PVC</a></h3><p>Οικονομική τιμή με μέγιστη ηχομόνωση και θερμομόνωση.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Κουζινόπορτες pvc" href="/pvc-balkonoportes/">Μονόφυλλες κουζινόπορτες pvc</a>
@@ -83,13 +83,13 @@
     </div>
   </div>
 
-  <a href="/epikoinonia/" title="παραδόσεις πανελλαδικά"><img alt="παραδόσεις πανελλαδικά" src="/img/paradosi-koufomat.jpg" class="diaff" width="720" height="200" loading="lazy"></a>
+  <a href="/epikoinonia/" title="παραδόσεις πανελλαδικά">{% image "img/paradosi-koufomat.jpg", "παραδόσεις πανελλαδικά", 720, 200, "diaff", "lazy" %}</a>
 
   <p class="titlos2">PVC Ρολά, Πατζούρια & Σίτες</p>
   <p class="basii">Επιλέξτε ανάμεσα σε παραδοσιακά <span class="nname">συνθετικά πατζούρια</span> και σε σύγχρονα <span class="nname">ρολά ασφαλείας</span>. Στην PVC OUTLET® θα βρείτε πατζούρια και ρολά ασφαλείας στις καλύτερες τιμές. Ενισχύστε τα κουφώματά σας με <strong>σίτες</strong> που ταιριάζουν στο κούφωμα και απολαύστε το καλοκαίρι προστατευόμενοι από κουνούπια.</p>
   <div class="row">
     <div class="column">
-      <img alt="Ρολά pvc ηλεκτρικά και χειροκίνητα" src="/img/rola-asfalias-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/rola-asfalias-pvcoutlet.webp", "Ρολά pvc ηλεκτρικά και χειροκίνητα", 400, 300, "", "lazy" %}
       <div class="pvch2 miko"><h3><a title="Ρολά pvc για κουφώματα" href="/pvc-rola/">Συνθετικά Ρολά PVC</a></h3><p>Με ηλεκτρικό μοτέρ ή ιμάντα στις καλύτερες τιμές. Εύκολη τοποθέτηση, υψηλή αισθητική.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Ηλεκτρικά ρολά pvc" href="/pvc-rola/">Ηλεκτρικά ρολά pvc</a>
@@ -97,7 +97,7 @@
       </div>
     </div>
     <div class="column">
-      <img alt="Πατζούρια pvc" src="/img/patzouria-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/patzouria-pvcoutlet.webp", "Πατζούρια pvc", 400, 300, "", "lazy" %}
       <div class="pvch2 miko"><h3><a title="παντζούρια pvc" href="/pvc-patzouria/">Πατζούρια PVC</a></h3><p>Ανοιγόμενα και συρόμενα συνθετικά πατζούρια pvc με χαμηλές τιμές, ασφάλεια και παραδοσιακό στυλ.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Πατζούρια pvc για παράθυρα" href="/pvc-patzouria/">Πατζούρια pvc για παράθυρα</a>
@@ -105,7 +105,7 @@
       </div>
     </div>
     <div class="column">
-      <img alt="Σίτες παραθύρων και μπαλκονόπορτας" src="/img/sites-pvcoutlet.webp" width="400" height="300" loading="lazy">
+      {% image "img/sites-pvcoutlet.webp", "Σίτες παραθύρων και μπαλκονόπορτας", 400, 300, "", "lazy" %}
       <div class="pvch2 miko"><h3><a title="Σίτες" href="/sites/">Σίτες</a></h3><p>6 είδη σίτας κατάλληλα για όλους τους τύπους κουφωμάτων.</p></div>
       <div class="pvcdesc">
         <a class="hed4" title="Σίτες πλισέ" href="/sites/">Σίτες πλισέ</a>
@@ -125,17 +125,17 @@
     <div class="row">
       <div class="smallcol pad30">
         <p class="nname">Τι είναι τα ενεργειακά κουφώματα pvc;</p>
-        <img class="m20marg" src="/img/pvc-window-pvcoutlet.jpg" alt="τι είναι τα PVC κουφώματα" width="400" height="267" loading="lazy">
+        {% image "img/pvc-window-pvcoutlet.jpg", "τι είναι τα PVC κουφώματα", 400, 267, "m20marg", "lazy" %}
         <p>Συνθετικό κούφωμα pvc είναι παράθυρα, πόρτες και μπαλκονόπορτες από συνθετικό υλικό pvc. Το PVC δίνει υψηλή θερμομονωτική και ηχομονωτική ικανότητα.</p>
       </div>
       <div class="smallcol pad30">
         <p class="nname">Γιατί οι τιμές των κουφωμάτων pvc είναι τόσο χαμηλές;</p>
-        <img class="m20marg" src="/img/kitrinizoun-ta-pvc-koufomata.jpg" alt="pvc κουφώματα τιμές" width="400" height="267" loading="lazy">
+        {% image "img/kitrinizoun-ta-pvc-koufomata.jpg", "pvc κουφώματα τιμές", 400, 267, "m20marg", "lazy" %}
         <p>Η τιμή των κουφωμάτων pvc είναι πολύ ανταγωνιστική σε σχέση με αλουμίνιο και ξύλο. Λόγω ζήτησης και τεχνολογίας η τιμή έχει γίνει πολύ ανταγωνιστική.</p>
       </div>
       <div class="smallcol pad30">
         <p class="nname">Τι διαφορά έχουν τα κουφώματα pvc από το αλουμίνιο;</p>
-        <img class="m20marg" src="/img/koufomata-pvc.jpg" alt="κουφώματα pvc και αλουμινίου" width="400" height="267" loading="lazy">
+        {% image "img/koufomata-pvc.jpg", "κουφώματα pvc και αλουμινίου", 400, 267, "m20marg", "lazy" %}
         <p>Το αλουμίνιο άγει τη θερμοκρασία· το συνθετικό pvc όχι. Τα pvc διατηρούν θερμοκρασία και προσφέρουν καλύτερη θερμομόνωση.</p>
       </div>
     </div>
@@ -163,12 +163,12 @@
       <div class="column">
         <div class="testimo">
           <p class="nname">Αλέξης Αλεξάκης <span class="goldd">★★★★★</span></p>
-          <img alt="Καλλιθέα κουφώματα pvc" src="/img/koufomata-pvc-kallithea.jpg" width="400" height="267" loading="lazy">
+          {% image "img/koufomata-pvc-kallithea.jpg", "Καλλιθέα κουφώματα pvc", 400, 267, "", "lazy" %}
           <p>Μένω σε πολυσύχναστο δρόμο της Καλλιθέας. Τα συνθετικά κουφώματα pvc της PVCOUTLET άλλαξαν την ηχομόνωση και την ψυχική μου γαλήνη. Ευχαριστώ για τον επαγγελματισμό.</p>
         </div>
         <div class="testimo">
           <p class="nname">Μαρία Παναγούλη <span class="goldd">★★★★★</span></p>
-          <img alt="κουφώματα PVC Χαλάνδρι" src="/img/koufomata-pvc-halandri.jpg" width="400" height="267" loading="lazy">
+          {% image "img/koufomata-pvc-halandri.jpg", "κουφώματα PVC Χαλάνδρι", 400, 267, "", "lazy" %}
           <p>Διαμέρισμα στο Χαλάνδρι με πρόβλημα θέρμανσης. Τα κουφώματα της PVCoutlet άλλαξαν τελείως το κλίμα. Μπαλκονόπορτες και παράθυρα pvc με ρολά και σίτες – πολύ ευχαριστημένοι.</p>
         </div>
       </div>
@@ -179,14 +179,14 @@
         </div>
         <div class="testimo">
           <p class="nname">Ermelinda X. <span class="goldd">★★★★★</span></p>
-          <img alt="καφέ κουφώματα pvc" src="/img/kafe-koufomata-pvc.jpg" width="400" height="267" loading="lazy">
+          {% image "img/kafe-koufomata-pvc.jpg", "καφέ κουφώματα pvc", 400, 267, "", "lazy" %}
           <p>Πολύ καλοί επαγγελματίες. Ξύλινα κουφώματα PVC Rehau, πολύ καλή τιμή. Ευγενικοί, καθαροί. Προτείνω.</p>
         </div>
       </div>
       <div class="column">
         <div class="testimo">
           <p class="nname">Παναγιώτης Ρούσος <span class="goldd">★★★★★</span></p>
-          <img alt="ειδική κατασκευή κουφώματος PVC" src="/img/eidiki-kataskevi-pvc.jpg" width="400" height="267" loading="lazy">
+          {% image "img/eidiki-kataskevi-pvc.jpg", "ειδική κατασκευή κουφώματος PVC", 400, 267, "", "lazy" %}
           <p>Άλλαξα το παράθυρο του μπάνιου – ειδική κατασκευή pvc λόγω εξωτερικού δοκαριού. Πολύ καλή τιμή, πολύ ευχαριστημένος.</p>
         </div>
       </div>
