--- a/src/epikoinonia/index.njk
+++ b/src/epikoinonia/index.njk
@@ -7,6 +7,9 @@ ogTitle: Επικοινωνία | PVCOUTLET®
 ogDesc: Επικοινωνήστε μαζί μας για προσφορά κουφωμάτων pvc.
 h1: Επικοινωνία – Κουφώματα PVC σε 12 άτοκες δόσεις
 permalink: /epikoinonia/
+breadcrumbs:
+  - { name: "Κουφώματα PVC", url: "/" }
+  - { name: "Επικοινωνία", url: "/epikoinonia/" }
 ---
 
 {% include "hero.njk" %}
