--- a/src/pvc-balkonoportes/index.njk
+++ b/src/pvc-balkonoportes/index.njk
@@ -7,6 +7,11 @@ ogTitle: Μπαλκονόπορτες PVC σε τιμές από 350€ | PVCOUT
 ogDesc: Ετοιμοπαράδοτες μπαλκονόπορτες pvc. Θερμομόνωση, ηχομόνωση, πανελλαδική παράδοση.
 h1: Ετοιμοπαράδοτες μπαλκονόπορτες PVC σε τιμές από 350€
 permalink: /pvc-balkonoportes/
+breadcrumbs:
+  - { name: "Κουφώματα PVC", url: "/" }
+  - { name: "Μπαλκονόπορτες PVC", url: "/pvc-balkonoportes/" }
+productName: Μπαλκονόπορτες PVC ετοιμοπαράδοτες
+offerPrice: 350
 ---
 
 {% include "hero.njk" %}
@@ -17,9 +22,9 @@ permalink: /pvc-balkonoportes/
   <h2 class="titlos2">Μπαλκονόπορτες PVC</h2>
   <p class="basii">Στην PVC OUTLET® έχουμε <span class="nname">πόρτες pvc και μπαλκονόπορτες pvc</span> που καλύπτουν κάθε ανάγκη. Μονόφυλλη ή δίφυλλη μπαλκονόπορτα pvc στις διαστάσεις σας. <span class="nname">Οι μπαλκονόπορτες pvc</span> παρέχουν εξοικονόμιση ενέργειας και χρημάτων με <span class="nname">υψηλά επίπεδα θερμομόνωσης και ηχομόνωσης</span>. Όλες με διπλά ενεργειακά τζάμια 24mm 4 εποχών και αντιδιαρρηκτική προστασία.</p>
   <div class="row">
-    <div class="column"><img alt="Πόρτα εισόδου pvc" src="/img/porta-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="Πόρτες από PVC" href="/pvc-balkonoportes/">Πόρτες Εισόδου PVC</a></h3><p>Θερμομονωτικές πόρτες pvc σε μοντέρνα ή παραδοσιακά σχέδια.</p></div></div>
-    <div class="column"><img alt="Μπαλκονόπορτα pvc" src="/img/balkonopora-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Μπαλκονόπορτες PVC</a></h3><p>Η πιο συμφέρουσα λύση: οικονομική τιμή με μέγιστη ηχομόνωση και θερμομόνωση.</p></div></div>
-    <div class="column"><img alt="Κουζινόπορτα pvc" src="/img/balkonoporta-pvc-kouzinas-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="Κουζινόπορτες pvc" href="/pvc-balkonoportes/">Κουζινόπορτα PVC</a></h3><p>Οικονομική τιμή, μέγιστη ηχομόνωση και θερμομόνωση.</p></div></div>
+    <div class="column">{% image "img/porta-pvc-pvcoutlet.webp", "Πόρτα εισόδου pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Πόρτες από PVC" href="/pvc-balkonoportes/">Πόρτες Εισόδου PVC</a></h3><p>Θερμομονωτικές πόρτες pvc σε μοντέρνα ή παραδοσιακά σχέδια.</p></div></div>
+    <div class="column">{% image "img/balkonopora-pvc-pvcoutlet.webp", "Μπαλκονόπορτα pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="μπαλκονόπορτες pvc" href="/pvc-balkonoportes/">Μπαλκονόπορτες PVC</a></h3><p>Η πιο συμφέρουσα λύση: οικονομική τιμή με μέγιστη ηχομόνωση και θερμομόνωση.</p></div></div>
+    <div class="column">{% image "img/balkonoporta-pvc-kouzinas-pvcoutlet.webp", "Κουζινόπορτα pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Κουζινόπορτες pvc" href="/pvc-balkonoportes/">Κουζινόπορτα PVC</a></h3><p>Οικονομική τιμή, μέγιστη ηχομόνωση και θερμομόνωση.</p></div></div>
   </div>
   <p class="basii">Καλέστε για <strong>προσφορά μπαλκονόπορτας pvc</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
