--- a/src/pvc-patzouria/index.njk
+++ b/src/pvc-patzouria/index.njk
@@ -7,6 +7,11 @@ ogTitle: Πατζούρια PVC | PVCOUTLET®
 ogDesc: Πατζούρια pvc για παράθυρα και μπαλκονόπορτες.
 h1: Πατζούρια PVC από 50€
 permalink: /pvc-patzouria/
+breadcrumbs:
+  - { name: "Κουφώματα PVC", url: "/" }
+  - { name: "Πατζούρια PVC", url: "/pvc-patzouria/" }
+productName: Πατζούρια PVC συρόμενα
+offerPrice: 50
 ---
 
 {% include "hero.njk" %}
@@ -15,7 +20,7 @@ permalink: /pvc-patzouria/
   <h2 class="titlos2">Πατζούρια PVC</h2>
   <p class="basii">Ανοιγόμενα και συρόμενα <strong>συνθετικά πατζούρια pvc</strong> που συνδιάζουν χαμηλές τιμές, ασφάλεια και παραδοσιακό στυλ. Για παράθυρα και μπαλκονόπορτες.</p>
   <div class="row">
-    <div class="column"><img alt="Πατζούρια pvc" src="/img/patzouria-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="παντζούρια pvc" href="/pvc-patzouria/">Πατζούρια PVC</a></h3><p>Συνθετικά πατζούρια pvc για παράθυρα και μπαλκονόπορτες.</p></div></div>
+    <div class="column">{% image "img/patzouria-pvcoutlet.webp", "Πατζούρια pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="παντζούρια pvc" href="/pvc-patzouria/">Πατζούρια PVC</a></h3><p>Συνθετικά πατζούρια pvc για παράθυρα και μπαλκονόπορτες.</p></div></div>
   </div>
   <p class="basii">Προσφορά <strong>πατζουριών pvc</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
