--- a/src/sites/index.njk
+++ b/src/sites/index.njk
@@ -7,6 +7,11 @@ ogTitle: Σίτες παραθύρων πλισέ από €100 | PVCOUTLET®
 ogDesc: Σίτες πλισέ, ανοιγόμενες, κάθετες για κουφώματα pvc.
 h1: Σίτες παραθύρων & πορτών πλισέ σε τιμές από €100
 permalink: /sites/
+breadcrumbs:
+  - { name: "Κουφώματα PVC", url: "/" }
+  - { name: "Σίτες", url: "/sites/" }
+productName: Σίτες παραθύρων και πορτών πλισέ
+offerPrice: 100
 ---
 
 {% include "hero.njk" %}
@@ -15,7 +20,7 @@ permalink: /sites/
   <h2 class="titlos2">Σίτες</h2>
   <p class="basii">6 είδη <strong>σίτας</strong> κατάλληλα για όλους τους τύπους κουφωμάτων: πλισέ, ανοιγόμενες, κάθετης κίνησης. Ρωτήστε μας για να σας προτείνουμε τις σίτες που σας ταιριάζουν.</p>
   <div class="row">
-    <div class="column"><img alt="Σίτες παραθύρων και μπαλκονόπορτας" src="/img/sites-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="Σίτες" href="/sites/">Σίτες παραθύρων & πορτών</a></h3><p>Σίτες πλισέ, ανοιγόμενες, κάθετες για παράθυρα και μπαλκονόπορτες.</p></div></div>
+    <div class="column">{% image "img/sites-pvcoutlet.webp", "Σίτες παραθύρων και μπαλκονόπορτας", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Σίτες" href="/sites/">Σίτες παραθύρων & πορτών</a></h3><p>Σίτες πλισέ, ανοιγόμενες, κάθετες για παράθυρα και μπαλκονόπορτες.</p></div></div>
   </div>
   <p class="basii">Προσφορά <strong>σιτών</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
