--- a/src/pvc-parathira/index.njk
+++ b/src/pvc-parathira/index.njk
@@ -7,6 +7,11 @@ ogTitle: Παράθυρα PVC σε τιμές από 85€ | PVCOUTLET®
 ogDesc: Ετοιμοπαράδοτα παράθυρα pvc στις καλύτερες τιμές. Θερμομόνωση, ηχομόνωση, 12 άτοκες δόσεις.
 h1: Ετοιμοπαράδοτα παράθυρα PVC σε τιμές από 85€
 permalink: /pvc-parathira/
+breadcrumbs:
+  - { name: "Κουφώματα PVC", url: "/" }
+  - { name: "Παράθυρα PVC", url: "/pvc-parathira/" }
+productName: Παράθυρα PVC ετοιμοπαράδοτα
+offerPrice: 85
 ---
 
 {% include "hero.njk" %}
@@ -23,9 +28,9 @@ permalink: /pvc-parathira/
   <h2 class="titlos2">Παράθυρα PVC</h2>
   <p class="basii">Προσφέρουμε <strong>PVC παράθυρα σε όλες τις διαστάσεις και πολλούς χρωματισμούς.</strong> Μονόφυλλα και δίφυλλα <strong>παράθυρα pvc</strong> για σαλόνι, υπνοδωμάτια, μπάνιο και κουζίνα. Διπλά ενεργειακά τζάμια 24mm 4 εποχών, ακουστικά χερούλια και αντιδιαρρηκτική προστασία.</p>
   <div class="row">
-    <div class="column"><img alt="Παράθυρο pvc" src="/img/parathiro-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="Ανοιγόμενα παράθυρα pvc" href="/pvc-parathira/">Παράθυρα PVC ανοιγόμενα</a></h3><p>Συνθετικά κουφώματα pvc για εξοικονόμιση ενέργειας και ηχομόνωση.</p></div></div>
-    <div class="column"><img alt="Παράθυρο μπάνιου pvc" src="/img/parathiro-baniou-pvc-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="παράθυρα pvc μπάνιου" href="/pvc-parathira/">Παράθυρα Μπάνιου PVC</a></h3><p>Ιδανικά για μπάνιο λόγω ανθεκτικότητας στην υγρασία.</p></div></div>
-    <div class="column"><img alt="Παράθυρο κουζίνας pvc" src="/img/parathiro-pvc-kouzinas-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="παράθυρα pvc κουζίνας" href="/pvc-parathira/">Παράθυρα Κουζίνας PVC</a></h3><p>Καθαρίζουν εύκολα, υψηλή ανθεκτικότητα σε οικονομικές τιμές.</p></div></div>
+    <div class="column">{% image "img/parathiro-pvc-pvcoutlet.webp", "Παράθυρο pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Ανοιγόμενα παράθυρα pvc" href="/pvc-parathira/">Παράθυρα PVC ανοιγόμενα</a></h3><p>Συνθετικά κουφώματα pvc για εξοικονόμιση ενέργειας και ηχομόνωση.</p></div></div>
+    <div class="column">{% image "img/parathiro-baniou-pvc-pvcoutlet.webp", "Παράθυρο μπάνιου pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="παράθυρα pvc μπάνιου" href="/pvc-parathira/">Παράθυρα Μπάνιου PVC</a></h3><p>Ιδανικά για μπάνιο λόγω ανθεκτικότητας στην υγρασία.</p></div></div>
+    <div class="column">{% image "img/parathiro-pvc-kouzinas-pvcoutlet.webp", "Παράθυρο κουζίνας pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="παράθυρα pvc κουζίνας" href="/pvc-parathira/">Παράθυρα Κουζίνας PVC</a></h3><p>Καθαρίζουν εύκολα, υψηλή ανθεκτικότητα σε οικονομικές τιμές.</p></div></div>
   </div>
   <p class="basii">Καλέστε μας για <strong>προσφορά παράθυρων pvc</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή επισκεφθείτε το <a href="/epikoinonia/">φόρμα επικοινωνίας</a>.</p>
   <div class="sepp"></div>
