--- a/src/pvc-rola/index.njk
+++ b/src/pvc-rola/index.njk
@@ -7,6 +7,9 @@ ogTitle: Ρολά PVC | PVCOUTLET®
 ogDesc: Ρολά pvc ηλεκτρικά και χειροκίνητα στις καλύτερες τιμές.
 h1: Ρολά Πολυουρεθάνης σε οικονομικές τιμές
 permalink: /pvc-rola/
+breadcrumbs:
+  - { name: "Κουφώματα PVC", url: "/" }
+  - { name: "Ρολά PVC", url: "/pvc-rola/" }
 ---
 
 {% include "hero.njk" %}
@@ -15,7 +18,7 @@ permalink: /pvc-rola/
   <h2 class="titlos2">Ρολά PVC</h2>
   <p class="basii">Συνθετικά <strong>ρολά pvc</strong> με ηλεκτρικό μοτέρ ή ιμάντα στις καλύτερες τιμές. Εύκολη τοποθέτηση, υψηλή αισθητική και εγγύηση καλής λειτουργίας. Κατάλληλα για παράθυρα και μπαλκονόπορτες.</p>
   <div class="row">
-    <div class="column"><img alt="Ρολά pvc" src="/img/rola-asfalias-pvcoutlet.webp" width="400" height="300" loading="lazy"><div class="pvch2"><h3><a title="Ρολά pvc" href="/pvc-rola/">Συνθετικά Ρολά PVC</a></h3><p>Ηλεκτρικά και χειροκίνητα ρολά για κουφώματα.</p></div></div>
+    <div class="column">{% image "img/rola-asfalias-pvcoutlet.webp", "Ρολά pvc", 400, 300, "", "lazy" %}<div class="pvch2"><h3><a title="Ρολά pvc" href="/pvc-rola/">Συνθετικά Ρολά PVC</a></h3><p>Ηλεκτρικά και χειροκίνητα ρολά για κουφώματα.</p></div></div>
   </div>
   <p class="basii">Προσφορά <strong>ρολών pvc</strong>: <a href="tel:00302117259236">{{ site.phoneDisplay }}</a> ή <a href="/epikoinonia/">επικοινωνία</a>.</p>
   <div class="sepp"></div>
